# Luna-Engine

./: .gitignore  BuildProject.bat  CMakeLists.txt  CreateProject.bat  GenerateProject.bat  Programming-4-Engine.sln  README.md  premake5.lua
.github/workflows/: msbuild.yml
Engine/: CMakeLists.txt  Component.h  Engine.cpp  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  Font.cpp  Font.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  Main.cpp  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Singleton.h  TextComponent.h  TextObject.cpp  TextObject.h  Texture2D.cpp  Texture2D.h  Transform.cpp  Transform.h  imgui.ini  pch.h
Engine/Core/: Log.cpp  Log.h  Time.cpp  Time.h
Engine/Core/ECS/: Component.cpp  Component.h  RigidBody2D.cpp  RigidBody2D.h  SpriteAnimator.cpp  SpriteAnimator.h  TextComponent.cpp  TextComponent.h  TextureRenderer.cpp  TextureRenderer.h  TransformComponent.cpp  TransformComponent.h
Engine/Core/ECS/Custom/: FPSCounter.cpp  FPSCounter.h  HealthComponent.cpp  HealthComponent.h  HealthIndicator.cpp  HealthIndicator.h  Mover.cpp  Mover.h  PointComponent.cpp  PointComponent.h  PointIndicator.h  Rotator.cpp  Rotator.h
Engine/Core/Event/: EventManager.cpp  EventManager.h  IObserver.h  Subject.cpp  Subject.h
Engine/Core/Input/: Command.h  DieCommand.cpp  DieCommand.h  InputManager.cpp  InputManager.h  JumpCommand.cpp  JumpCommand.h  Keyboard.cpp  Keyboard.h  MoveCommands.h  PointCommand.cpp  PointCommand.h  XboxController.cpp  XboxController.h
Engine/Core/Services/: ServiceLocator.cpp  ServiceLocator.h
Engine/Core/Services/Physics/: IPhysicsService.h  PhysicsService.cpp  PhysicsService.h
Engine/Core/Services/Sound/: ISoundService.h  LoggingSoundSystem.cpp  LoggingSoundSystem.h  SDLSoundSystem.cpp  SDLSoundSystem.h
Engine/Core/Steam/: Achievement.h  AchievementGlobals.h  CSteamAchievements.cpp  CSteamAchievements.h
Engine/Scenes/: RotatorScene.cpp  RotatorScene.h  Scene.cpp  Scene.h  TrashTheCacheScene.cpp  TrashTheCacheScene.h
Engine/Util/: OBJParser.cpp  OBJParser.h
Game/: CMakeLists.txt  Main.cpp
Game/AnimationStates/: AttackState.cpp  AttackState.h  DeathState.cpp  DeathState.h  FlyBackState.cpp  FlyBackState.h  FlyInState.cpp  FlyInState.h  IdleState.cpp  IdleState.h
Game/Components/: FPSCounter.cpp  FPSCounter.h  HealthComponent.cpp  HealthComponent.h  HealthIndicator.cpp  HealthIndicator.h  HighScoreIndicator.cpp  HighScoreIndicator.h  LivesIndicator.cpp  LivesIndicator.h  PointComponent.cpp  PointComponent.h  PointIndicator.cpp  PointIndicator.h  Rotator.cpp  Rotator.h
Game/Components/Enemy/: BaseEnemy.cpp  BaseEnemy.h  EnemyBug.cpp  EnemyBug.h
Game/Components/Game/: EnemyManager.cpp  EnemyManager.h
Game/Components/Menu/: MenuOption.cpp  MenuOption.h  OptionContainer.cpp  OptionContainer.h
Game/Components/Player/: Projectile.cpp  Projectile.h  SpaceFighter.cpp  SpaceFighter.h
Game/Components/Util/: AutoKill.cpp  AutoKill.h
Game/Data/Resources/: bunny.bobj
Game/Data/Resources/Audio/: all_sounds.pkf  galaga_sounds.pkf  theme.pkf
Game/Data/Resources/Levels/: lvl_0.json  lvl_1.json  lvl_2.json
Game/Data/Resources/Saved/: game_settings.json  save_data.json
Game/Input/: DieCommand.cpp  DieCommand.h  JumpCommand.cpp  JumpCommand.h  MoveCommand.cpp  MoveCommand.h  MoveCommands.h  PointCommand.cpp  PointCommand.h  ShootCommand.cpp  ShootCommand.h
Game/Input/Utils/: NavigateMenuCommand.cpp  NavigateMenuCommand.h  SoundVolumeCommand.cpp  SoundVolumeCommand.h  SwitchSceneCommand.cpp  SwitchSceneCommand.h
Game/LevelInstancer/: LevelInstancer.cpp  LevelInstancer.h
Game/LevelLoader/: LevelLoader.cpp  LevelLoader.h  ScoreReader.cpp  ScoreReader.h  ScoreWriter.cpp  ScoreWriter.h
Game/LevelLoader/Structs/: GameSettings.h  Level.h  Score.h
Game/Util/: Bezier.h  BezierSpline.cpp  BezierSpline.h  Random.cpp  Random.h
Minigin/: Font.cpp  Font.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  Main.cpp  Minigin.cpp  Minigin.h  Minigin.vcxproj  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  TextObject.cpp  TextObject.h  Texture2D.cpp  Texture2D.h  Transform.cpp  Transform.h
scripts/: BuildProjectDebug.bat  BuildProjectRelease.bat  GenerateProjectDebug.bat  GenerateProjectRelease.bat
